--- a/kubernetes/charts/gateway/values.yaml
+++ b/kubernetes/charts/gateway/values.yaml
@@ -40,12 +40,18 @@ serviceAccount:
 podAnnotations: {}
 # This is for setting Kubernetes Labels to a Pod.
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: {}
+podLabels: 
+  app.kubernetes.io/name: "gateway"
+
 
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
+securityContext:
+  runAsNonRoot: false
+
+# DEFAULT SECURITY CONTEXT 
+# securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
