--- a/kubernetes/helmfile.yaml
+++ b/kubernetes/helmfile.yaml
@@ -1,31 +1,57 @@
 repositories:
   - name: nats
     url: https://nats-io.github.io/k8s/helm/charts/
+    
+  - name: kyverno
+    url: https://kyverno.github.io/kyverno/
 
 releases:
+  - name: kyverno
+    chart: kyverno/kyverno
+    namespace: kyverno
+    createNamespace: true
+    wait: true
+    waitForJobs: true
+    hooks:
+      - events: ["postsync"]
+        showlogs: true
+        command: "kubectl"
+        args: ["apply", "-f", "manifests/kyverno"]
+      - events: ["postsync"]
+        showlogs: true
+        command: "/bin/bash"
+        args: ["-c", "until ./scripts/kyverno-ready.sh; do sleep 3; done"]
+        
   - name: nats
     chart: nats/nats
     namespace: ssi 
     createNamespace: true
+    needs:
+      - kyverno/kyverno
    
   - name: gateway
-    chart: gateway
+    chart: charts/gateway
     createNamespace: true
     namespace: ssi
     values:
       - values/gateway.yaml
+    needs:
+      - kyverno/kyverno
 
   - name: names-service
-    chart: names-service
+    chart: charts/names-service
     createNamespace: true
     namespace: ssi
     values:
       - values/names-service.yaml
+    needs:
+      - kyverno/kyverno
 
   - name: verbs-service
-    chart: verbs-service
+    chart: charts/verbs-service
     createNamespace: true
     namespace: ssi
     values:
       - values/verbs-service.yaml
-
+    needs:
+      - kyverno/kyverno
