--- a/kubernetes/charts/names-service/values.yaml
+++ b/kubernetes/charts/names-service/values.yaml
@@ -11,7 +11,7 @@ nats:
 
 # This sets the container image more information can be found here: https://kubernetes.io/docs/concepts/containers/images/
 image:
-  repository: ssi-names-service
+  repository: ""
   # This sets the pull policy for images.
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
@@ -40,13 +40,14 @@ serviceAccount:
 podAnnotations: {}
 # This is for setting Kubernetes Labels to a Pod.
 # For more information checkout: https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/
-podLabels: 
-  app.kubernetes.io/name: "names-service"
+podLabels: {}
 
 podSecurityContext: {}
   # fsGroup: 2000
 
 securityContext: {}
+  # runAsUser: 0
+# securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
