--- a/kubernetes/manifests/network-policies/mutate-security-context.yaml
+++ b/kubernetes/manifests/network-policies/mutate-security-context.yaml
@@ -22,6 +22,7 @@ spec:
       - resources:
           namespaces:
           - kube-system
+          - istio-system
           - kyverno
           - falco
     mutate:
