--- a/kubernetes/manifests/network-policies/require-name-label.yaml
+++ b/kubernetes/manifests/network-policies/require-name-label.yaml
@@ -23,6 +23,7 @@ spec:
           namespaces:
           - kube-system
           - kyverno
+          - istio-system
           - falco
     validate:
       failureAction: Enforce
