--- a/kubernetes/manifests/network-policies/require-run-as-non-root-user.yaml
+++ b/kubernetes/manifests/network-policies/require-run-as-non-root-user.yaml
@@ -26,6 +26,7 @@ spec:
           namespaces:
           - kube-system
           - kyverno
+          - istio-system
           - falco
           
     validate:
