--- a/microservices/gateway/Dockerfile
+++ b/microservices/gateway/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /app
 RUN addgroup -S -g 1500 appgroup && adduser -S -u 1500 -G appgroup appuser
 
 FROM base AS dev
-COPY package.json pnpm-lock.yaml ./
-RUN pnpm i --frozen-lockfile
+COPY package.json ./
+RUN pnpm install
 COPY . .
 RUN chown -R appuser:appgroup /app
 USER appuser
@@ -17,14 +17,14 @@ EXPOSE 3000
 CMD [ "pnpm", "run", "start:dev" ]
 
 FROM base AS build
-COPY package.json pnpm-lock.yaml ./
-RUN pnpm i --frozen-lockfile
+COPY package.json ./
+RUN pnpm install
 COPY . .
 RUN pnpm run build && \
   pnpm prune --prod
 RUN chown -R appuser:appgroup /app
 
-FROM node:22-alpine AS prod
+FROM node:22-alpine AS prod 
 ENV NODE_ENV=production
 RUN apk add --no-cache tini
 
