--- a/microservices/verbs-service/Dockerfile
+++ b/microservices/verbs-service/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /app
 RUN addgroup -S -g 1500 appgroup && adduser -S -u 1500 -G appgroup appuser
 
 FROM base AS dev
-COPY package.json pnpm-lock.yaml ./
-RUN pnpm i --frozen-lockfile
+COPY package.json ./
+RUN pnpm install
 COPY . .
 RUN chown -R appuser:appgroup /app
 USER appuser
@@ -17,8 +17,9 @@ EXPOSE 3000
 CMD [ "pnpm", "run", "start:dev" ]
 
 FROM base AS build
-COPY package.json pnpm-lock.yaml ./
-RUN pnpm i --frozen-lockfile
+COPY package.json ./
+RUN pnpm install
+
 COPY . .
 RUN pnpm run build && \
   pnpm prune --prod
