--- a/kubernetes/charts/verbs-service/fleet.yaml
+++ b/kubernetes/charts/verbs-service/fleet.yaml
@@ -3,7 +3,7 @@ namespace: default
 # Custom helm options
 helm:
   # The release name to use. If empty a generated release name will be used
-  releaseName: gateway
+  releaseName: verbs-service
 
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
