fix: override chart images with fleet
Signed-off-by: sylvain-pierrot <sylvain.pierrot@etu.umontpellier.fr>

--- a/kubernetes/charts/verbs-service/fleet.yaml
+++ b/kubernetes/charts/verbs-service/fleet.yaml
@@ -25,4 +25,6 @@ helm:
 
   # Custom values that will be passed as values.yaml to the installation
   values:
-    replicas: 2
+    image:
+      repository: microservices-verbes-service
+      tag: latest
