--- a/microservices/tts-api/.gitignore
+++ b/microservices/tts-api/.gitignore
@@ -1,3 +1,44 @@
-node_modules
+# Dependencies
+node_modules/
+package-lock.json
+
+# Build output
+dist/
+build/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Generated audio files
+audio_cache/
+uploads/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.temp
