--- a/kubernetes/admin/argocd/application.yaml
+++ b/kubernetes/admin/argocd/application.yaml
@@ -1,41 +1,38 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: red-team-app
+  name: llm-on-call
   namespace: argocd
   finalizers:
   # The default behaviour is foreground cascading deletion
   - resources-finalizer.argocd.argoproj.io
 spec:
   # The project the application belongs to.
-  project: red-team-project
+  project: llm-on-call-project
 
   # Source of the application manifests
   source:
     directory:
       recurse: true
-    path: manifests/red-team
-    repoURL: https://github.com/mmoreiradj/cluster-panic-gitops.git
+    path: kubernetes/llm-on-call-prod
+    repoURL: https://github.com/mmoreiradj/llm-on-call.git
     targetRevision: HEAD
 
   # Destination cluster and namespace to deploy the application
   destination:
     server: https://kubernetes.default.svc
     # The namespace will only be set for namespace-scoped resources that have not set a value for .metadata.namespace
-    namespace: app-namespace
+    namespace: llm-on-call
 
   # Sync policy
   syncPolicy:
-    automated:
+    automated: 
       prune: true
       selfHeal: true
       allowEmpty: false
     syncOptions:
     - PrunePropagationPolicy=background
-    #- CreateNamespace=true
-    # managedNamespaceMetadata: # Sets the metadata for the application namespace. Only valid if CreateNamespace=true (see above), otherwise it's a no-op.
-    #   labels:
-    #     pod-security.kubernetes.io/enforce: restricted
+    - CreateNamespace=true
 
     # RevisionHistoryLimit limits the number of items kept in the application's revision history, which is used for
     # informational purposes as well as for rollbacks to previous versions. This should only be changed in exceptional
