chore: update argo project description
Signed-off-by: Sylvain Pierrot <pierrot.sylvain14@gmail.com>

--- a/kubernetes/admin/argocd/project.yaml
+++ b/kubernetes/admin/argocd/project.yaml
@@ -8,7 +8,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   # Project description
-  description: lLLM On Call
+  description: LLM On Call
 
   # Allow manifests to deploy from any Git repos
   sourceRepos:
