--- a/microservices/agent/package.json
+++ b/microservices/agent/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "git-client": "^1.9.3",
     "hono": "^4.7.10",
+    "nats": "^2.29.3",
     "zod": "^3.25.20"
   },
   "devDependencies": {
