--- a/microservices/agent/package.json
+++ b/microservices/agent/package.json
@@ -12,7 +12,9 @@
     "@langchain/langgraph": "^0.2.73",
     "@langchain/ollama": "^0.2.0",
     "@langchain/openai": "^0.5.11",
+    "axios": "^1.6.7",
     "dotenv": "^16.5.0",
+    "form-data": "^4.0.0",
     "git-client": "^1.9.3",
     "hono": "^4.7.10",
     "nats": "^2.29.3",
