--- a/microservices/agent/package.json
+++ b/microservices/agent/package.json
@@ -11,9 +11,11 @@
     "@langchain/core": "^0.3.57",
     "@langchain/langgraph": "^0.2.73",
     "@langchain/ollama": "^0.2.0",
+    "@langchain/openai": "^0.5.11",
     "dotenv": "^16.5.0",
     "git-client": "^1.9.3",
     "hono": "^4.7.10",
+    "nats": "^2.29.3",
     "zod": "^3.25.20"
   },
   "devDependencies": {
